# psl

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  about.html  about_8dox.html  algorithms_8hpp.html  allocator_8cpp.html  allocator_8hpp.html  allocator__traits_8hpp.html  annotated.html  array_8hpp.html  classpsl_1_1abstract__memory__resource.html  classpsl_1_1allocator.html  classpsl_1_1array.html  classpsl_1_1array_3_01T_00_01dynamic__extent_00_01Settings_01_4.html  classpsl_1_1bad__access.html  classpsl_1_1bad__exceptional__access.html  classpsl_1_1contiguous__range__iterator.html  classpsl_1_1exception.html  classpsl_1_1expected.html  classpsl_1_1implementation__error.html  classpsl_1_1new__resource.html  classpsl_1_1not__implemented.html  classpsl_1_1optional.html  classpsl_1_1span.html  classpsl_1_1span_3_01T_00_01dynamic__extent_00_01Stride_01_4.html  classpsl_1_1static__exception.html  classpsl_1_1traited__memory__resource.html  classpsl_1_1uuidv4.html  concepts_8hpp.html  config_8hpp.html  debug__basic__allocation_8hpp.html  dir_4b402f12b0a15b9a1b59a364c0b52536.html  dir_84d4ec99856759213102e4209c09c524.html  dir_8dffcb5cd1f082a1a3386f5f119af188.html  doxyfile  enum_8hpp.html  exceptions_8hpp.html  (+128 more)
.github/workflows/: documentation.yml  macos.yml  ubuntu.yml  windows.yml
assembly/: CMakeLists.txt  main.cpp
cmake/: CodeCov.cmake
documentation/: CMakeLists.txt  configuration.py  doxyfile
documentation/css/: m-layout.css
documentation/pages/: about.dox
inc/psl/: algorithms.h  allocator.h  array.h  concepts.h  config.h  ct_unordered_map.h  dequeue.h  enum.h  exception.h  flat_unordered_map.h  iterators.h  literals.h  log.h  matrix.h  profiler.h  property.h  queue.h  range.h  resource.h  span.h  spmc.h  static_array.h  string.h  thread.h  uid.h  vec.h  zip.h
inc/psl/details/: crc.h  empty.h  fixed_string.h  metaprogramming.h  sbo_storage.h  spmc_consumer.h  spmc_producer.h  vec_macro.inl  vec_macro_cleanup.inl
inc/psl/ecs/: concepts.h  entity.h  state.h
inc/psl/ecs/details/: component_info.h  staged_sparse_component_array.h
inc/psl/memory/: allocator.h  region.h
inc/psl/meta/: data.h  library.h
inc/psl/serialization/: format.h  property.h  serialization.h  stream_writer.h  versioning.h
inc/psl/sinks/: sink.h  stream.h
inc/psl/threading/: workgroup.h
include/: psl.natvis
include/psl/: algorithms.hpp  allocator.hpp  allocator_traits.hpp  array.hpp  bytes.hpp  chunked_array.hpp  concepts.hpp  config.hpp  enum.hpp  exceptions.hpp  expected.hpp  iterators.hpp  optional.hpp  random.hpp  span.hpp  strong_type_wrapper.hpp  type_concepts.hpp  types.hpp  uid.hpp
include/psl/containers/: string_view.hpp  variant.hpp
include/psl/debug/: debug_basic_allocation.hpp
include/psl/details/: fixed_ascii_string.hpp  optional_value_storage.hpp  sbo_storage.hpp  source_location.hpp
include/psl/fwd/: allocator.hpp  random.hpp
include/psl/serialization/: format.hpp  property.hpp  serializer.hpp  versioning.hpp
source/: allocator.cpp
source/serialization/: format.cpp
src/: main.cpp
src/psl/: uid.cpp  vec.cpp
src/psl/ecs/: state.cpp
src/psl/memory/: region.cpp
tests/: CMakeLists.txt
tests/data/: simple.pff  structured.pff
tests/include/tests/: types.hpp
tests/source/: algorithms.cpp  allocator.cpp  array.cpp  expected.cpp  iterators.cpp  optional.cpp  random.cpp  span.cpp  tests.cpp  uid.cpp
tests/source/containers/: string_view.cpp
tests/source/serialization/: format.cpp  property.cpp
tests/src/: algorithms.cpp  allocators.cpp  array.cpp  dequeue.cpp  ecs.cpp  iterators.cpp  property.cpp  queue.cpp  tests.cpp  vec.cpp
tests/src/serialization/: property.cpp
tools/: clang-format.py  config.template  generate.py  generate_configuration.py  generate_coverage.py  generate_project_info.py  versioning.py
